# CameraEstelllar

./: .gitignore  App.tsx  AstroCamera.tsx  CLAUDE.md  FASE_0_ROADMAP.md  GEMINI.md  PROJECT_MEMORY.md  PROXIMA_TAREA.md  README.md  RESEARCH_RESULTS.md  app.json  astro-engineer.skill  build.gradle  build.gradle.kts  gradle.properties  input_informacion.md  input_skills.md  input_subagente.md  investigacion updater 1  local.properties  package-lock.json  package.json  pendiente.md  plan modulo stacking y procesado de tomas  settings.gradle  settings.gradle.kts
.agents/: AGENT_CATALOG.md  stack.config.md
.agents/historia/: PROXIMA_TAREA_2026-06-04.md  PROXIMA_TAREA_2026-06-05.md  PROXIMA_TAREA_2026-06-05_bypass.md  PROXIMA_TAREA_2026-06-06_auditoria_bypass.md  PROXIMA_TAREA_2026-06-13_asistente_interactivo.md  PROXIMA_TAREA_2026-06-13_telegram.md  PROXIMA_TAREA_2026-06-13_telegram_cron.md  PROXIMA_TAREA_2026-06-13_telegram_listener.md
.agents/scripts/: run_tests.ps1
Application/: build.gradle
Application/src/main/: AndroidManifest.xml
Application/src/main/java/com/example/android/camera2raw/: Camera2RawFragment.java
CameraEstelllar-main/: App.tsx  AstroCamera.tsx  PROJECT_MEMORY.md  README.md  ROADMAP.md  app.json
CameraEstelllar-main/android/app/: build.gradle
CameraEstelllar-main/android/app/src/main/: AndroidManifest.xml
CameraEstelllar-main/android/app/src/main/java/com/cameraestellar/: AstroCameraPackage.java  MainApplication.kt
CameraEstelllar-main/ios/CameraEstellarTemp/: AppDelegate.swift  LaunchScreen.storyboard
CameraEstelllar-main/ios/CameraEstellarTemp.xcodeproj/: project.pbxproj
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/assets/: index.android.bundle
android/app/src/main/java/com/cameraestellar/: AstroCameraModule.java  AstroCameraView.java  AstroCameraViewManager.java  MainActivity.kt
android/app/src/main/java/com/cameraestellartemp/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/stelllar/camera/: InstrumentedTests.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  astro_align.cpp  native-lib.cpp  native_stacker.cpp
app/src/main/java/com/stellar/camera/: AstroCaptureService.kt  AstroLensInfo.kt  CameraController.kt  MainActivity.kt  NativeEngine.kt
app/src/main/java/com/stelllar/camera/: CameraActivity.kt  CameraStellarApplication.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  fragment_camera.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  styles.xml
astro-engineer/: SKILL.md
astro-engineer/references/: camera2.md  ndk-opencv.md  stacking-math.md  vulkan-gpu.md
docs/: ARQUITECTURA_Y_DECISIONES.md  AUDITORIA_ARQUITECTURA_V3.md  CHANGELOG.md  HITOS.md  PLAN_ESTRUCTURADO_STACKING.md  walkthrough.md
docs/camera2_reference/: CameraManager_and_Characteristics.md  Camera_Extension_and_Offline.md  Errors_and_Callbacks.md  Package_Summary_and_Legacy.md
gradle/wrapper/: gradle-wrapper.properties
investigacion_camera2/: CaptureRequest_Builder.md  INDICE_LINKS.md  ImageReader_Formats.md  TotalCaptureResult.md
ios/: Podfile
ios/CameraEstellarTemp/: Info.plist
ios/CameraEstellarTemp.xcodeproj/xcshareddata/xcschemes/: CameraEstellarTemp.xcscheme
telegram/: GUIA_MIGRACION_BOT.md  asistente_telegram.ps1  get_pending_messages.ps1  listen_telegram.ps1  send_files.ps1  send_reply.ps1  telegram_state.json
temp_meta/Meta-Passthrough-Camera-API-Samples-main/: CONTRIBUTING.md  README.md  settings.gradle.kts
temp_meta/Meta-Passthrough-Camera-API-Samples-main/app/: build.gradle.kts
temp_meta/Meta-Passthrough-Camera-API-Samples-main/gradle/: libs.versions.toml
temp_meta/Meta-Passthrough-Camera-API-Samples-main/gradle/wrapper/: gradle-wrapper.properties
utils/: build.gradle
(+38 files in other folders)
